# newr32

./: CMakeLists.txt  res.qrc
src/dbopt/: r32recordvalue.cpp  r32recordvalue.h
src/res/: detectvalue.sql  r32.qss
src/serialport/: handlemcudata.cpp  handlemcudata.h  handler32data.cpp  handler32data.h  mcuconstant.h  r32constant.h  serialportcom.cpp  serialportcom.h
src/widget/: mcuoperatewidget.cpp  mcuoperatewidget.h  serialportsettingswidget.cpp  serialportsettingswidget.h
